data/derived/comb/progs/unify/prog4637.ml.out
Characters 74-82:
  | (1,d) -> d=(d-1) && buildX();;
                        ^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         bool
